pktfe::loan transfer bug

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -138,7 +138,7 @@
                                                         Field Required</mat-error> -->
                                                     <!-- {{laonTransferDetails.masterLoan.loanTransfer.loanTransferStatusForBM}} -->
                                                     <select name="" id="" class="form-control"
-                                                        (change)="clearAppraiser();statusAppraiser()"
+                                                        (change)="statusAppraiser()"
                                                         [class.isError]="approvalForm.controls.loanTransferStatusForAppraiser.touched && this.approvalForm.controls.loanTransferStatusForAppraiser.invalid"
                                                         formControlName="loanTransferStatusForAppraiser">
                                                         <option value="" disabled selected>
@@ -169,8 +169,7 @@
                                                         *ngIf="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
                                                         Field
                                                         Required</mat-error> -->
-                                                    <select name="" id="" class="form-control"
-                                                        (change)="clearBM();statusBM()"
+                                                    <select name="" id="" class="form-control" (change)="statusBM()"
                                                         [class.isError]="approvalForm.controls.loanTransferStatusForBM.touched && this.approvalForm.controls.loanTransferStatusForBM.value =='pending'"
                                                         formControlName="loanTransferStatusForBM">
                                                         <option value="pending" disabled selected>Select Status</option>
