--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.scss
@@ -1,7 +1,7 @@
 :host{
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 250% !important;
+        width: 260% !important;
     }
 
     .mat-column-principalOutstandingAmountLTV{
@@ -17,4 +17,11 @@
         flex: 0 0 4%;
     }
 
+    .mat-column-updateStatus {
+        flex: 0 0 5%;
+    }
+
+    .mat-column-ornaments {
+        flex: 0 0 4%;
+    }
 }
