--- a/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
@@ -28,6 +28,9 @@
                         <td class="text-center">{{emi?.balanceAmount}}</td>
                         <td>{{emi?.emiStatus | titlecase}}</td>
                     </tr>
+                    <tr *ngIf="emiDetails && !emiDetails.length">
+                        <td align="center" colspan="6">No Records Found</td>
+                    </tr>
             </table>
         </div>
     </kt-portlet-body>
