--- a/gold-admin-frontend/src/app/views/partials/components/part-payment-log-dialog/part-payment-log-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/part-payment-log-dialog/part-payment-log-dialog.component.html
@@ -10,7 +10,7 @@
                     <th class="transparent">Loan Amount</th>
                     <th class="transparent">Payment Date</th>
                     <th class="transparent">Paid Part Amount</th>
-                    <th class="transparent">Principal Outstanding Amount</th>
+                    <th class="transparent">Principal Outstanding</th>
                     <!-- <th class="transparent">Total Part Payment</th> -->
                 </thead>
                 <tbody>
@@ -52,6 +52,9 @@
                             </span>
                         </td>
                         <!-- <td></td> -->
+                    </tr>
+                    <tr *ngIf="partPaymentHistory && !partPaymentHistory.length">
+                        <td align="center" colspan="6">No Records Found</td>
                     </tr>
                 </tbody>
             </table>
