pktfe::minor bugs

--- a/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
@@ -213,7 +213,7 @@
                     </div>
                     <div class="row justify-content-center kt-margin-t-15">
                         <div class="col-4 offset-4">
-                            <kt-button [myClass]="'w-100'" [type]="'button'" [value]="'Send OTP'"
+                            <kt-button [myClass]="'w-100'" [type]="'button'" [notTitleCase]="true" [value]="'Send OTP'"
                                 (action)="generateOTP()"></kt-button>
                         </div>
                         <div class="col-4 d-flex justify-content-center align-items-center ">
