--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
@@ -113,7 +113,7 @@
                                 </div>
                             </ng-container>
                         </ng-container>
-                        <div *ngIf="!row.isProcessComplete">
+                        <!-- <div *ngIf="!row.isProcessComplete">
                             <div *ngIf="row.customer.kycStatus === 'approved' && row.isAssigned">
                                 <div
                                     *ngxPermissionsOnly="['loanApplicationAdd', 'addLoanTransfer', 'scrapApplicationAdd']">
@@ -142,7 +142,6 @@
                                                 (click)="applyLoanTransfer(row)"> Loan Transfer</button>
                                         </ng-container>
 
-                                        <!-- scrap -->
                                         <ng-container *ngIf="row.module.id === 3">
                                             <button *ngxPermissionsOnly="['scrapApplicationAdd']" mat-menu-item
                                                 (click)="applyScrapBuy(row)">Apply
@@ -151,27 +150,52 @@
 
                                     </mat-menu>
                                 </div>
+                            </div>
+                        </div> -->
 
-                                <!-- <ng-container *ngxPermissionsOnly="['loanApplicationAdd']">
-            <button style="width: 120px;" class="apply-kyc" (click)="applyLoan(row)"
-                *ngIf="row.product.id === 1 && row.isAssigned && !row.isProcessComplete">
-                Apply Loan
-            </button>
-        </ng-container>
+                        <div *ngIf="!row.isProcessComplete">
+                            <div *ngIf="row.customer.kycStatus === 'approved' && row.isAssigned">
+                                <div *ngIf="permission.loanApplicationAdd || permission.addLoanTransfer">
 
-        <ng-container *ngxPermissionsOnly="['scrapApplicationAdd']">
-            <button style="width: 120px;" class="apply-kyc" (click)="applyScrapBuy(row)"
-                *ngIf="row.product.id === 3 && row.isAssigned && !row.isProcessComplete">
-                Apply Scrap Gold
-            </button>
-        </ng-container>
+                                    <button mat-button [matMenuTriggerFor]="menu">
+                                        <mat-icon>more_vert</mat-icon>
+                                    </button>
+                                    <mat-menu #menu="matMenu" xPosition="before">
 
-        <ng-container *ngxPermissionsOnly="['addLoanTransfer', 'loanTransferAppraiserRating']">
-            <button style="width: 120px;" class="apply-kyc" (click)="applyLoanTransfer(row)"
-                *ngIf="row.product.id === 2 && row.isAssigned && !row.isProcessComplete">
-                Loan Transfer
-            </button>
-        </ng-container> -->
+                                        <ng-container *ngIf="row?.module.id === 1 && row?.status === 'complete'">
+                                            <ng-container *ngIf="!row?.masterLoan?.isLoanTransfer">
+                                                <button *ngxPermissionsOnly="['loanApplicationAdd']" mat-menu-item
+                                                    (click)="applyLoan(row)">Apply Loan</button>
+                                            </ng-container>
+
+                                            <ng-container *ngIf="row?.masterLoan?.isLoanTransfer">
+                                                <button *ngxPermissionsOnly="['addLoanTransfer']" mat-menu-item
+                                                    (click)="applyLoanTransfer(row)"> Loan Transfer</button>
+                                            </ng-container>
+                                        </ng-container>
+
+                                        <ng-container *ngIf="row?.module.id === 1 && row?.status === 'incomplete'">
+                                            <button *ngxPermissionsOnly="['loanApplicationAdd']" mat-menu-item
+                                                (click)="applyLoan(row)">Apply Loan</button>
+                                            <button *ngxPermissionsOnly="['addLoanTransfer']" mat-menu-item
+                                                (click)="applyLoanTransfer(row)"> Loan Transfer</button>
+                                        </ng-container>
+                                    </mat-menu>
+                                </div>
+                            </div>
+
+                            <!-- scrap -->
+                            <div *ngIf="row.customer.scrapKycStatus === 'approved' && row.isAssigned">
+                                <div *ngIf="permission.scrapApplicationAdd && row.module.id === 3">
+                                    <button mat-button [matMenuTriggerFor]="menuScrap">
+                                        <mat-icon>more_vert</mat-icon>
+                                    </button>
+                                    <mat-menu #menuScrap="matMenu" xPosition="before">
+                                        <button *ngxPermissionsOnly="['scrapApplicationAdd']" mat-menu-item
+                                            (click)="applyScrapBuy(row)">Apply
+                                            Scrap Gold</button>
+                                    </mat-menu>
+                                </div>
                             </div>
                         </div>
 
