--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -19,7 +19,8 @@
                                     <div class="col align-self-center">
                                         <input type="file" accept="image/*" #files class="d-none"
                                             (input)="getFileInfo($event,'profile')" />
-                                        <label (click)="webcam();" class="kt-pointer text-primary mandatory"
+                                        <label (click)="webcam();" class="kt-pointer text-primary"
+                                            [class.mandatory]="customerDetails.moduleId == 1"
                                             style="font-weight: 600;">Upload Profile
                                             Picture</label>
                                     </div>
@@ -113,7 +114,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1 form-label">
-                                        <label class="mandatory">Marital Status</label>
+                                        <label [class.mandatory]="customerDetails.moduleId == 1">Marital Status</label>
                                     </div>
                                     <div class="col-7">
                                         <select name="" id="" formControlName="martialStatus" class="form-control"
@@ -162,7 +163,7 @@
                                     <div class="col-3 offset-1 form-label">
                                         <label
                                             *ngIf="controls.martialStatus.value == 'single' || controls.martialStatus.value == 'divorced' || controls.martialStatus.value == ''"
-                                            class="mandatory">Father's Name</label>
+                                            [class.mandatory]="customerDetails.moduleId == 1">Father's Name</label>
                                         <label *ngIf="controls.martialStatus.value == 'married'" class="mandatory">
                                             Spouse Name</label>
 
@@ -206,7 +207,8 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="offset-1 col-3 form-label">
-                                        <label class="mandatory">Alternate Mobile No.</label>
+                                        <label [class.mandatory]="customerDetails.moduleId == 1">Alternate Mobile
+                                            No.</label>
                                     </div>
                                     <div class="col-7">
                                         <input type="text" formControlName="alternateMobileNumber" class="form-control"
