--- a/gold-loan-backend/templates/acknowledge-unsecure-template.html
+++ b/gold-loan-backend/templates/acknowledge-unsecure-template.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href={{secureHtml}}>
 
     <style>
-        html{zoom:0.75;}
+        html {
+            zoom: 0.75;
+        }
+
         .tableHead {
             width: 20%;
             height: 40px;
@@ -24,7 +27,7 @@
     <script src={{jqueryJs}}></script>
     <script src={{popperJs}}></script>
     <script src={{bootstrapJs}}></script>
-    
+
     <div class="container py-5 pr-5 pl-5">
         {{#each customerLoanDetail}}
         <div class="text-center col-10 pl-0 pr-5 " style="font-weight: 500">
@@ -124,21 +127,23 @@
                     </tr>
                     <tr>
                         <!-- <th style="width:20%; height: 40px; ">Sr.No.</th> -->
-                        <th style="width:20%; height: 40px;">Ornament Types</th>
+                        <th style="width:20%; height: 40px;">Ornament Type</th>
                         <th style="width:20%; height: 40px; ">Quantity</th>
                         <th style="width:20%; height: 40px; ">Gross weight</th>
                         <th style="width:20%; height: 40px; ">Deduction</th>
                         <th style="width:20%; height: 40px; ">Net weight</th>
                     </tr>
+                    {{#each  ornaments}}
                     <tr>
                         <!-- <td></td> -->
-                        <td style=" word-break: break-all;">{{this.ornamentTypes}}</td>
+                        <td style=" word-break: break-all;">{{this.ornamentType}}</td>
                         <td>{{this.quantity}}</td>
                         <td>{{this.grossWeight}}</td>
                         <td>{{this.deduction}}</td>
                         <td>{{this.netWeight}}</td>
 
                     </tr>
+                    {{/each}}
                 </table>
 
             </div>
@@ -168,7 +173,7 @@
             </div>
 
         </div>
-        <div class="row pt-3 mb-5 pr-5 pl-0">
+        <div class="row pt-2 mb-5 pr-5 pl-0">
             <div class="col-10 " style="font-size: small;font-weight: 400;">
                 <p class="mb-2">Declaration :</p>
                 <p>As per Loan application by you on date
@@ -203,7 +208,7 @@
                 <p><b>Customer Signature </b></p>
             </div>
         </div>
-        <div class="row pt-3 pr-5 pl-0">
+        <div class="row pt-2 pr-5 pl-0">
             <div class="col-10 " style="font-size: small;font-weight: 400;">
                 <p>Note: Please retain the document for the release of Gold
                 </p>
@@ -215,7 +220,7 @@
 
 
     <div class="container py-5 pr-5 pl-5">
-        
+
         {{#each customerUnsecureLoanDetail}}
         <div class="text-center col-10 pl-0 pr-5 " style="font-weight: 500">
             <h6 class="text-center"><b>AUGMONT PRIVATE LIMITED</b></h6>
