front end changes

--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay-history/quick-pay-history.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay-history/quick-pay-history.component.html
@@ -27,7 +27,7 @@
                                 {{quick?.depositStatus | titlecase}}
                             </span>
                             <span *ngIf="quick?.depositStatus == 'Pending'" class="text-warning">
-                                {{quick?.depositStatus | titlecase}}
+                               Waiting For Approval 
                             </span>
                             <span *ngIf="quick?.depositStatus == 'Rejected'" class="text-danger">
                                 {{quick?.depositStatus | titlecase}}
