--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6" *ngIf="!scrapIds">
                 <div class="row justify-content-center kt-margin-t-10">
                     <div class="col-4 form-label">
                         <label class="kt-padding-l-10 mandatory">Amount to be Disbursed</label>
