--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.html
@@ -110,7 +110,8 @@
                 </ng-container>
                 <ng-container matColumnDef="currentLocation">
                     <mat-header-cell *matHeaderCellDef>Current Location</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item?.masterLoan?.locationData[0]?.packetLocation?.location | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let item">
+                        {{item?.masterLoan?.locationData[0]?.packetLocation?.location | titlecase}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef>Acknowledgement Receipt</mat-header-cell>
@@ -121,10 +122,10 @@
                         </div>
                     </mat-cell>
                 </ng-container>
-                
+
 
                 <ng-container matColumnDef="updateStatus">
-                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
                     <mat-cell *matCellDef="let item">
                         <!-- <ng-container *ngIf="item.fullReleaseStatus != 'released'">
                             <button *ngxPermissionsOnly="['fullReleaseStatus']" style="width: 130px;" class="apply-kyc"
@@ -144,10 +145,17 @@
                             </ng-container>
                         </ng-container>
                         <ng-container>
-                            <button *ngIf="item?.masterLoan?.locationData[0]?.packetLocation?.location == 'partner branch in'" style="width: 130px;" class="apply-kyc" (click)="collect(item?.masterLoanId,item.masterLoan.packet,item.masterLoan)">Collect</button>
+                            <button
+                                *ngIf="item?.masterLoan?.locationData[0]?.packetLocation?.location == 'partner branch in'"
+                                style="width: 130px;" class="apply-kyc"
+                                (click)="collect(item?.masterLoanId,item.masterLoan.packet,item.masterLoan)">Collect</button>
                         </ng-container>
                         <ng-container>
-                            <button *ngIf="item?.masterLoan?.locationData[0]?.packetLocation?.location == 'partner branch out'" style="width: 130px;" class="apply-kyc" (click)="homeIn(item?.masterLoanId,item.masterLoan.packet,item.id)">Customer Home In</button>
+                            <button
+                                *ngIf="item?.masterLoan?.locationData[0]?.packetLocation?.location == 'partner branch out'"
+                                style="width: 130px;" class="apply-kyc"
+                                (click)="homeIn(item?.masterLoanId,item.masterLoan.packet,item.id)">Customer Home
+                                In</button>
                         </ng-container>
                     </mat-cell>
                 </ng-container>
