--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -128,7 +128,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="updateStatus">
-                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
                     <mat-cell *matCellDef="let item">
                         <!-- <ng-container *ngIf="item.partReleaseStatus != 'released'">
                             <button *ngxPermissionsOnly="['partReleaseStatus']" style="width: 130px;" class="apply-kyc"
