--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/checkout/checkout.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/checkout/checkout.component.html
@@ -10,7 +10,7 @@
                     <label class="kt-padding-l-10 mandatory">Enter OTP</label>
                 </div>
                 <div class="col-8">
-                    <input type="text" class="form-control" placeholder="Enter OTP" formControlName="otp"
+                    <input type="text" class="form-control" numbersOnly placeholder="Enter OTP" formControlName="otp"
                         [class.isError]="controls.otp.invalid &&  controls.otp.touched" [readonly]="otpVerfied"
                         [class.cursor-not-allowed]="otpVerfied" maxlength="4">
                     <mat-error *ngIf="controls.otp.errors?.required && controls.otp.touched">Field Required </mat-error>
