kyc-clone::minor chnages

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/kyc-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/kyc-settings.component.html
@@ -44,7 +44,8 @@
                     Organization Details
                 </p>
 
-                <!-- <p class="step-details"> User's Personal Details</p> -->
+                <p *ngIf="module && module.moduleId == 3 && module.userType == null" class="step-details">Personal
+                    Details</p>
             </div>
         </a>
 
