pktfe::karat added

--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -244,10 +244,10 @@
                                     <div class="text-gray font-weight-500 kt-margin-b-5">LTV %</div>
                                     <div class="text-color font-weight-500">{{ornaments.ltvPercent}}%</div>
                                 </div>
-                                <!-- <div class="col-3">
-                                    <div class="text-gray font-weight-500 kt-margin-b-5">LTV Amount</div>
-                                    <div class="text-color font-weight-500">{{ornaments.ltvAmount}}</div>
-                                </div> -->
+                                <div class="col-3">
+                                    <div class="text-gray font-weight-500 kt-margin-b-5">Karat</div>
+                                    <div class="text-color font-weight-500">{{ornaments.karat + ' K'}}</div>
+                                </div>
                                 <div class="col-3">
                                     <div class="text-gray font-weight-500 kt-margin-b-5">Loan Amount </div>
                                     <div class="text-color font-weight-500">{{ornaments.loanAmount}}</div>
