--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -162,7 +162,8 @@
                     </kt-button>
                 </div>
                 <div class="col-3 my-auto d-flex align-item-center">
-                    <kt-button [value]="'View Interest EMI Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
+                    <kt-button [value]="'View Interest EMI Logs'" [notTitleCase]="true" [type]="'button'"
+                        (click)="viewEmiLogs()"></kt-button>
 
                 </div>
             </div>
